-Gave certain elements a minimum width to prevent squishing at lower resolutions.

--- a/trunk/web/OSBLE/Content/Site.css
+++ b/trunk/web/OSBLE/Content/Site.css
@@ -43,6 +43,7 @@ a img
 	height: 90px;
 	background-color: #dfdfdf;
 	border-bottom: 1px solid #074974;
+	min-width:1000px;
 }
 
 #top_bar
@@ -149,6 +150,7 @@ a img
 	position: absolute;
 	top: 70px;
 	left: 10px;
+	min-width:1000px;
 }
 
 #tabs a
@@ -191,6 +193,7 @@ a img
 	width: 98%;
 	margin-left: 1%;
 	margin-right: 1%;
+	min-width:1000px;
 }
 
 /* Users Page */
